libcxx_headers = [
  "//buildtools/third_party/libc++/trunk/include/CMakeLists.txt",
  "//buildtools/third_party/libc++/trunk/include/__availability",
  "//buildtools/third_party/libc++/trunk/include/__bit_reference",
  "//buildtools/third_party/libc++/trunk/include/__bits",
  "//buildtools/third_party/libc++/trunk/include/__bsd_locale_defaults.h",
  "//buildtools/third_party/libc++/trunk/include/__bsd_locale_fallbacks.h",
  "//buildtools/third_party/libc++/trunk/include/__config",
  "//buildtools/third_party/libc++/trunk/include/__config_site.in",
  "//buildtools/third_party/libc++/trunk/include/__debug",
  "//buildtools/third_party/libc++/trunk/include/__errc",
  "//buildtools/third_party/libc++/trunk/include/__functional_03",
  "//buildtools/third_party/libc++/trunk/include/__functional_base",
  "//buildtools/third_party/libc++/trunk/include/__functional_base_03",
  "//buildtools/third_party/libc++/trunk/include/__hash_table",
  "//buildtools/third_party/libc++/trunk/include/__iterator/concepts.h",
  "//buildtools/third_party/libc++/trunk/include/__iterator/incrementable_traits.h",
  "//buildtools/third_party/libc++/trunk/include/__iterator/iter_move.h",
  "//buildtools/third_party/libc++/trunk/include/__iterator/iterator_traits.h",
  "//buildtools/third_party/libc++/trunk/include/__iterator/readable_traits.h",
  "//buildtools/third_party/libc++/trunk/include/__libcpp_version",
  "//buildtools/third_party/libc++/trunk/include/__locale",
  "//buildtools/third_party/libc++/trunk/include/__memory/addressof.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/allocation_guard.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/allocator.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/allocator_traits.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/auto_ptr.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/compressed_pair.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/construct_at.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/pointer_safety.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/pointer_traits.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/raw_storage_iterator.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/shared_ptr.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/temporary_buffer.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/uninitialized_algorithms.h",
  "//buildtools/third_party/libc++/trunk/include/__memory/unique_ptr.h",
  "//buildtools/third_party/libc++/trunk/include/__mutex_base",
  "//buildtools/third_party/libc++/trunk/include/__node_handle",
  "//buildtools/third_party/libc++/trunk/include/__nullptr",
  "//buildtools/third_party/libc++/trunk/include/__ranges/access.h",
  "//buildtools/third_party/libc++/trunk/include/__ranges/concepts.h",
  "//buildtools/third_party/libc++/trunk/include/__ranges/data.h",
  "//buildtools/third_party/libc++/trunk/include/__ranges/empty.h",
  "//buildtools/third_party/libc++/trunk/include/__ranges/enable_borrowed_range.h",
  "//buildtools/third_party/libc++/trunk/include/__ranges/size.h",
  "//buildtools/third_party/libc++/trunk/include/__ranges/view.h",
  "//buildtools/third_party/libc++/trunk/include/__split_buffer",
  "//buildtools/third_party/libc++/trunk/include/__std_stream",
  "//buildtools/third_party/libc++/trunk/include/__string",
  "//buildtools/third_party/libc++/trunk/include/__support/android/locale_bionic.h",
  "//buildtools/third_party/libc++/trunk/include/__support/fuchsia/xlocale.h",
  "//buildtools/third_party/libc++/trunk/include/__support/ibm/gettod_zos.h",
  "//buildtools/third_party/libc++/trunk/include/__support/ibm/limits.h",
  "//buildtools/third_party/libc++/trunk/include/__support/ibm/locale_mgmt_aix.h",
  "//buildtools/third_party/libc++/trunk/include/__support/ibm/locale_mgmt_zos.h",
  "//buildtools/third_party/libc++/trunk/include/__support/ibm/nanosleep.h",
  "//buildtools/third_party/libc++/trunk/include/__support/ibm/support.h",
  "//buildtools/third_party/libc++/trunk/include/__support/ibm/xlocale.h",
  "//buildtools/third_party/libc++/trunk/include/__support/musl/xlocale.h",
  "//buildtools/third_party/libc++/trunk/include/__support/newlib/xlocale.h",
  "//buildtools/third_party/libc++/trunk/include/__support/nuttx/xlocale.h",
  "//buildtools/third_party/libc++/trunk/include/__support/openbsd/xlocale.h",
  "//buildtools/third_party/libc++/trunk/include/__support/solaris/floatingpoint.h",
  "//buildtools/third_party/libc++/trunk/include/__support/solaris/wchar.h",
  "//buildtools/third_party/libc++/trunk/include/__support/solaris/xlocale.h",
  "//buildtools/third_party/libc++/trunk/include/__support/win32/limits_msvc_win32.h",
  "//buildtools/third_party/libc++/trunk/include/__support/win32/locale_win32.h",
  "//buildtools/third_party/libc++/trunk/include/__support/xlocale/__nop_locale_mgmt.h",
  "//buildtools/third_party/libc++/trunk/include/__support/xlocale/__posix_l_fallback.h",
  "//buildtools/third_party/libc++/trunk/include/__support/xlocale/__strtonum_fallback.h",
  "//buildtools/third_party/libc++/trunk/include/__threading_support",
  "//buildtools/third_party/libc++/trunk/include/__tree",
  "//buildtools/third_party/libc++/trunk/include/__tuple",
  "//buildtools/third_party/libc++/trunk/include/__undef_macros",
  "//buildtools/third_party/libc++/trunk/include/__utility/to_underlying.h",
  "//buildtools/third_party/libc++/trunk/include/algorithm",
  "//buildtools/third_party/libc++/trunk/include/any",
  "//buildtools/third_party/libc++/trunk/include/array",
  "//buildtools/third_party/libc++/trunk/include/atomic",
  "//buildtools/third_party/libc++/trunk/include/barrier",
  "//buildtools/third_party/libc++/trunk/include/bit",
  "//buildtools/third_party/libc++/trunk/include/bitset",
  "//buildtools/third_party/libc++/trunk/include/cassert",
  "//buildtools/third_party/libc++/trunk/include/ccomplex",
  "//buildtools/third_party/libc++/trunk/include/cctype",
  "//buildtools/third_party/libc++/trunk/include/cerrno",
  "//buildtools/third_party/libc++/trunk/include/cfenv",
  "//buildtools/third_party/libc++/trunk/include/cfloat",
  "//buildtools/third_party/libc++/trunk/include/charconv",
  "//buildtools/third_party/libc++/trunk/include/chrono",
  "//buildtools/third_party/libc++/trunk/include/cinttypes",
  "//buildtools/third_party/libc++/trunk/include/ciso646",
  "//buildtools/third_party/libc++/trunk/include/climits",
  "//buildtools/third_party/libc++/trunk/include/clocale",
  "//buildtools/third_party/libc++/trunk/include/cmath",
  "//buildtools/third_party/libc++/trunk/include/codecvt",
  "//buildtools/third_party/libc++/trunk/include/compare",
  "//buildtools/third_party/libc++/trunk/include/complex",
  "//buildtools/third_party/libc++/trunk/include/complex.h",
  "//buildtools/third_party/libc++/trunk/include/concepts",
  "//buildtools/third_party/libc++/trunk/include/condition_variable",
  "//buildtools/third_party/libc++/trunk/include/csetjmp",
  "//buildtools/third_party/libc++/trunk/include/csignal",
  "//buildtools/third_party/libc++/trunk/include/cstdarg",
  "//buildtools/third_party/libc++/trunk/include/cstdbool",
  "//buildtools/third_party/libc++/trunk/include/cstddef",
  "//buildtools/third_party/libc++/trunk/include/cstdint",
  "//buildtools/third_party/libc++/trunk/include/cstdio",
  "//buildtools/third_party/libc++/trunk/include/cstdlib",
  "//buildtools/third_party/libc++/trunk/include/cstring",
  "//buildtools/third_party/libc++/trunk/include/ctgmath",
  "//buildtools/third_party/libc++/trunk/include/ctime",
  "//buildtools/third_party/libc++/trunk/include/ctype.h",
  "//buildtools/third_party/libc++/trunk/include/cwchar",
  "//buildtools/third_party/libc++/trunk/include/cwctype",
  "//buildtools/third_party/libc++/trunk/include/deque",
  "//buildtools/third_party/libc++/trunk/include/errno.h",
  "//buildtools/third_party/libc++/trunk/include/exception",
  "//buildtools/third_party/libc++/trunk/include/execution",
  "//buildtools/third_party/libc++/trunk/include/experimental/__config",
  "//buildtools/third_party/libc++/trunk/include/experimental/__memory",
  "//buildtools/third_party/libc++/trunk/include/experimental/algorithm",
  "//buildtools/third_party/libc++/trunk/include/experimental/coroutine",
  "//buildtools/third_party/libc++/trunk/include/experimental/deque",
  "//buildtools/third_party/libc++/trunk/include/experimental/filesystem",
  "//buildtools/third_party/libc++/trunk/include/experimental/forward_list",
  "//buildtools/third_party/libc++/trunk/include/experimental/functional",
  "//buildtools/third_party/libc++/trunk/include/experimental/iterator",
  "//buildtools/third_party/libc++/trunk/include/experimental/list",
  "//buildtools/third_party/libc++/trunk/include/experimental/map",
  "//buildtools/third_party/libc++/trunk/include/experimental/memory_resource",
  "//buildtools/third_party/libc++/trunk/include/experimental/propagate_const",
  "//buildtools/third_party/libc++/trunk/include/experimental/regex",
  "//buildtools/third_party/libc++/trunk/include/experimental/set",
  "//buildtools/third_party/libc++/trunk/include/experimental/simd",
  "//buildtools/third_party/libc++/trunk/include/experimental/string",
  "//buildtools/third_party/libc++/trunk/include/experimental/type_traits",
  "//buildtools/third_party/libc++/trunk/include/experimental/unordered_map",
  "//buildtools/third_party/libc++/trunk/include/experimental/unordered_set",
  "//buildtools/third_party/libc++/trunk/include/experimental/utility",
  "//buildtools/third_party/libc++/trunk/include/experimental/vector",
  "//buildtools/third_party/libc++/trunk/include/ext/__hash",
  "//buildtools/third_party/libc++/trunk/include/ext/hash_map",
  "//buildtools/third_party/libc++/trunk/include/ext/hash_set",
  "//buildtools/third_party/libc++/trunk/include/fenv.h",
  "//buildtools/third_party/libc++/trunk/include/filesystem",
  "//buildtools/third_party/libc++/trunk/include/float.h",
  "//buildtools/third_party/libc++/trunk/include/format",
  "//buildtools/third_party/libc++/trunk/include/forward_list",
  "//buildtools/third_party/libc++/trunk/include/fstream",
  "//buildtools/third_party/libc++/trunk/include/functional",
  "//buildtools/third_party/libc++/trunk/include/future",
  "//buildtools/third_party/libc++/trunk/include/initializer_list",
  "//buildtools/third_party/libc++/trunk/include/inttypes.h",
  "//buildtools/third_party/libc++/trunk/include/iomanip",
  "//buildtools/third_party/libc++/trunk/include/ios",
  "//buildtools/third_party/libc++/trunk/include/iosfwd",
  "//buildtools/third_party/libc++/trunk/include/iostream",
  "//buildtools/third_party/libc++/trunk/include/istream",
  "//buildtools/third_party/libc++/trunk/include/iterator",
  "//buildtools/third_party/libc++/trunk/include/latch",
  "//buildtools/third_party/libc++/trunk/include/limits",
  "//buildtools/third_party/libc++/trunk/include/limits.h",
  "//buildtools/third_party/libc++/trunk/include/list",
  "//buildtools/third_party/libc++/trunk/include/locale",
  "//buildtools/third_party/libc++/trunk/include/locale.h",
  "//buildtools/third_party/libc++/trunk/include/map",
  "//buildtools/third_party/libc++/trunk/include/math.h",
  "//buildtools/third_party/libc++/trunk/include/memory",
  "//buildtools/third_party/libc++/trunk/include/module.modulemap",
  "//buildtools/third_party/libc++/trunk/include/mutex",
  "//buildtools/third_party/libc++/trunk/include/new",
  "//buildtools/third_party/libc++/trunk/include/numbers",
  "//buildtools/third_party/libc++/trunk/include/numeric",
  "//buildtools/third_party/libc++/trunk/include/optional",
  "//buildtools/third_party/libc++/trunk/include/ostream",
  "//buildtools/third_party/libc++/trunk/include/queue",
  "//buildtools/third_party/libc++/trunk/include/random",
  "//buildtools/third_party/libc++/trunk/include/ranges",
  "//buildtools/third_party/libc++/trunk/include/ratio",
  "//buildtools/third_party/libc++/trunk/include/regex",
  "//buildtools/third_party/libc++/trunk/include/scoped_allocator",
  "//buildtools/third_party/libc++/trunk/include/semaphore",
  "//buildtools/third_party/libc++/trunk/include/set",
  "//buildtools/third_party/libc++/trunk/include/setjmp.h",
  "//buildtools/third_party/libc++/trunk/include/shared_mutex",
  "//buildtools/third_party/libc++/trunk/include/span",
  "//buildtools/third_party/libc++/trunk/include/sstream",
  "//buildtools/third_party/libc++/trunk/include/stack",
  "//buildtools/third_party/libc++/trunk/include/stdbool.h",
  "//buildtools/third_party/libc++/trunk/include/stddef.h",
  "//buildtools/third_party/libc++/trunk/include/stdexcept",
  "//buildtools/third_party/libc++/trunk/include/stdint.h",
  "//buildtools/third_party/libc++/trunk/include/stdio.h",
  "//buildtools/third_party/libc++/trunk/include/stdlib.h",
  "//buildtools/third_party/libc++/trunk/include/streambuf",
  "//buildtools/third_party/libc++/trunk/include/string",
  "//buildtools/third_party/libc++/trunk/include/string.h",
  "//buildtools/third_party/libc++/trunk/include/string_view",
  "//buildtools/third_party/libc++/trunk/include/strstream",
  "//buildtools/third_party/libc++/trunk/include/system_error",
  "//buildtools/third_party/libc++/trunk/include/tgmath.h",
  "//buildtools/third_party/libc++/trunk/include/thread",
  "//buildtools/third_party/libc++/trunk/include/tuple",
  "//buildtools/third_party/libc++/trunk/include/type_traits",
  "//buildtools/third_party/libc++/trunk/include/typeindex",
  "//buildtools/third_party/libc++/trunk/include/typeinfo",
  "//buildtools/third_party/libc++/trunk/include/unordered_map",
  "//buildtools/third_party/libc++/trunk/include/unordered_set",
  "//buildtools/third_party/libc++/trunk/include/utility",
  "//buildtools/third_party/libc++/trunk/include/valarray",
  "//buildtools/third_party/libc++/trunk/include/variant",
  "//buildtools/third_party/libc++/trunk/include/vector",
  "//buildtools/third_party/libc++/trunk/include/version",
  "//buildtools/third_party/libc++/trunk/include/wchar.h",
  "//buildtools/third_party/libc++/trunk/include/wctype.h",
]

libcxx_licenses = [ "//buildtools/third_party/libc++/trunk/LICENSE.TXT" ]
