import("//build/config/ui.gni")

static_library("brightray") {
  deps = [
    "//base",
    "//base:base_static",
    "//components/network_session_configurator/common",
    "//components/prefs",
    "//components/certificate_transparency",
    "//content/public/browser",
    "//content/shell:resources",
    "//net:extras",
    "//net:net_with_v8",
    "//skia",
    "//ui/views",
  ]

  include_dirs = [ ".." ]

  if (is_linux) {
    deps += [ "//build/config/linux/gtk" ]
  }

  extra_source_filters = []
  if (is_mac) {
    extra_source_filters += [
      "*_views.cc",
      "*_views.h",
      "*\bviews/*",
    ]
  }

  set_sources_assignment_filter(
      sources_assignment_filter + extra_source_filters)
  sources = [
    "browser/brightray_paths.h",
    "browser/browser_client.cc",
    "browser/browser_client.h",
    "browser/browser_context.cc",
    "browser/browser_context.h",
    "browser/browser_main_parts.cc",
    "browser/browser_main_parts.h",
    "browser/browser_main_parts_mac.mm",
    "browser/devtools_manager_delegate.cc",
    "browser/devtools_manager_delegate.h",
    "browser/devtools_ui.cc",
    "browser/devtools_ui.h",
    "browser/inspectable_web_contents.cc",
    "browser/inspectable_web_contents.h",
    "browser/inspectable_web_contents_delegate.h",
    "browser/inspectable_web_contents_view_delegate.cc",
    "browser/inspectable_web_contents_view_delegate.h",
    "browser/inspectable_web_contents_impl.cc",
    "browser/inspectable_web_contents_impl.h",
    "browser/inspectable_web_contents_view.h",
    "browser/inspectable_web_contents_view_mac.h",
    "browser/inspectable_web_contents_view_mac.mm",
    "browser/io_thread.cc",
    "browser/io_thread.h",
    "browser/mac/bry_inspectable_web_contents_view.h",
    "browser/mac/bry_inspectable_web_contents_view.mm",
    "browser/mac/cocoa_notification.h",
    "browser/mac/cocoa_notification.mm",
    "browser/mac/event_dispatching_window.h",
    "browser/mac/event_dispatching_window.mm",
    "browser/mac/notification_center_delegate.h",
    "browser/mac/notification_center_delegate.mm",
    "browser/mac/notification_presenter_mac.h",
    "browser/mac/notification_presenter_mac.mm",
    "browser/media/media_capture_devices_dispatcher.cc",
    "browser/media/media_capture_devices_dispatcher.h",
    "browser/media/media_device_id_salt.cc",
    "browser/media/media_device_id_salt.h",
    "browser/media/media_stream_devices_controller.cc",
    "browser/media/media_stream_devices_controller.h",
    "browser/net/require_ct_delegate.cc",
    "browser/net/require_ct_delegate.h",
    "browser/net_log.cc",
    "browser/net_log.h",
    "browser/notification_delegate.h",
    "browser/notification_presenter.cc",
    "browser/notification_presenter.h",
    "browser/notification.cc",
    "browser/notification.h",
    "browser/platform_notification_service.cc",
    "browser/platform_notification_service.h",
    "browser/linux/libnotify_loader.h",
    "browser/linux/libnotify_loader.cc",
    "browser/linux/libnotify_notification.h",
    "browser/linux/libnotify_notification.cc",
    "browser/linux/notification_presenter_linux.h",
    "browser/linux/notification_presenter_linux.cc",
    "browser/win/notification_presenter_win.cc",
    "browser/win/notification_presenter_win.h",
    "browser/win/notification_presenter_win7.cc",
    "browser/win/notification_presenter_win7.h",
    "browser/win/scoped_hstring.cc",
    "browser/win/scoped_hstring.h",
    "browser/win/win32_desktop_notifications/common.h",
    "browser/win/win32_desktop_notifications/desktop_notification_controller.cc",
    "browser/win/win32_desktop_notifications/desktop_notification_controller.h",
    "browser/win/win32_desktop_notifications/toast_uia.cc",
    "browser/win/win32_desktop_notifications/toast_uia.h",
    "browser/win/win32_desktop_notifications/toast.cc",
    "browser/win/win32_desktop_notifications/toast.h",
    "browser/win/win32_notification.cc",
    "browser/win/win32_notification.h",
    "browser/win/windows_toast_notification.cc",
    "browser/win/windows_toast_notification.h",
    "browser/url_request_context_getter.cc",
    "browser/url_request_context_getter.h",
    "browser/views/inspectable_web_contents_view_views.h",
    "browser/views/inspectable_web_contents_view_views.cc",
    "browser/views/views_delegate.cc",
    "browser/views/views_delegate.h",
    "browser/web_ui_controller_factory.cc",
    "browser/web_ui_controller_factory.h",
    "browser/zoom_level_delegate.cc",
    "browser/zoom_level_delegate.h",
    "common/application_info.h",
    "common/application_info.cc",
    "common/application_info_mac.mm",
    "common/application_info_win.cc",
    "common/content_client.cc",
    "common/content_client.h",
    "common/mac/main_application_bundle.h",
    "common/mac/main_application_bundle.mm",
    "common/main_delegate.cc",
    "common/main_delegate.h",
    "common/main_delegate_mac.mm",
    "common/switches.cc",
    "common/switches.h",
    "common/platform_util_linux.cc",
    "common/platform_util.h",
  ]
  set_sources_assignment_filter(sources_assignment_filter)

  sources += [
    "//chrome/browser/devtools/devtools_contents_resizing_strategy.cc",
    "//chrome/browser/devtools/devtools_contents_resizing_strategy.h",
    "//chrome/browser/devtools/devtools_embedder_message_dispatcher.cc",
    "//chrome/browser/devtools/devtools_embedder_message_dispatcher.h",
    "//chrome/browser/devtools/devtools_file_system_indexer.cc",
    "//chrome/browser/devtools/devtools_file_system_indexer.h",
  ]
}
