import("//build/config/ui.gni")

static_library("brightray") {
  deps = [
    "//base",
    "//base:base_static",
    "//content/public/browser",
    "//content/shell:copy_shell_resources",
    "//net:extras",
    "//net:net_with_v8",
    "//ui/views",
  ]

  include_dirs = [ ".." ]

  if (is_linux) {
    deps += [ "//build/config/linux/gtk" ]
  }

  sources = [
    "browser/brightray_paths.h",
    "browser/browser_client.cc",
    "browser/browser_client.h",
    "browser/browser_main_parts.cc",
    "browser/browser_main_parts.h",
    "browser/browser_main_parts_mac.mm",
    "browser/win/scoped_hstring.cc",
    "browser/win/scoped_hstring.h",
    "common/application_info.cc",
    "common/application_info.h",
    "common/application_info_mac.mm",
    "common/application_info_win.cc",
    "common/content_client.cc",
    "common/content_client.h",
    "common/mac/main_application_bundle.h",
    "common/mac/main_application_bundle.mm",
    "common/main_delegate.cc",
    "common/main_delegate.h",
    "common/main_delegate_mac.mm",
  ]
}
