# Copyright (c) 2018 GitHub, Inc.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

import("//build/buildflag_header.gni")
import("//electron/buildflags/buildflags.gni")

buildflag_header("buildflags") {
  header = "buildflags.h"

  flags = [
    "ENABLE_DESKTOP_CAPTURER=$enable_desktop_capturer",
    "ENABLE_RUN_AS_NODE=$enable_run_as_node",
    "ENABLE_OSR=$enable_osr",
    "ENABLE_VIEWS_API=$enable_views_api",
    "ENABLE_PDF_VIEWER=$enable_pdf_viewer",
    "ENABLE_TTS=$enable_tts",
    "ENABLE_COLOR_CHOOSER=$enable_color_chooser",
    "ENABLE_ELECTRON_EXTENSIONS=$enable_electron_extensions",
    "ENABLE_BUILTIN_SPELLCHECKER=$enable_builtin_spellchecker",
    "ENABLE_PICTURE_IN_PICTURE=$enable_picture_in_picture",
    "ENABLE_WIN_DARK_MODE_WINDOW_UI=$enable_win_dark_mode_window_ui",
    "OVERRIDE_LOCATION_PROVIDER=$enable_fake_location_provider",
  ]
}
