# Copyright (c) 2018 GitHub, Inc.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

declare_args() {
  enable_pdf_viewer = true

  # Provide a fake location provider for mocking
  # the geolocation responses. Disable it if you
  # need to test with chromium's location provider.
  # Should not be enabled for release build.
  enable_fake_location_provider = !is_official_build

  # Enable Chrome extensions support.
  enable_electron_extensions = true

  # Enable Spellchecker support
  enable_builtin_spellchecker = true

  # The version of Electron.
  # Packagers and vendor builders should set this in gn args to avoid running
  # the script that reads git tag.
  override_electron_version = ""
}
