# Copyright (c) 2018 GitHub, Inc.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

declare_args() {
  enable_pdf_viewer = true

  # Provide a fake location provider for mocking
  # the geolocation responses. Disable it if you
  # need to test with chromium's location provider.
  # Should not be enabled for release build.
  enable_fake_location_provider = !is_official_build

  # Enable Chrome extensions support.
  enable_electron_extensions = true

  # Enable Spellchecker support
  enable_builtin_spellchecker = true

  # Enable the spell checker.
  enable_spellcheck = use_blink

  # Use the operating system's spellchecker rather than hunspell. This does
  # not affect the "red underline" spellchecker which can consult Google's
  # server-based spellcheck service.
  use_browser_spellchecker = is_android || is_mac || is_win

  # Whether the enhanced spellcheck service is available on the platform. This is
  # effectively equal to all desktop platforms.
  enable_spelling_service = is_mac

  # Only Mac has a spellcheck panel.
  has_spellcheck_panel = is_mac

  # The version of Electron.
  # Packagers and vendor builders should set this in gn args to avoid running
  # the script that reads git tag.
  override_electron_version = ""

  # Define an extra item that will show in process.versions, the value must
  # be in the format of "key:value".
  # Packagers and vendor builders can set this in gn args to attach extra info
  # about the build in the binary.
  electron_vendor_version = ""
}
