# Copyright (c) 2018 GitHub, Inc.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

declare_args() {
  enable_pdf_viewer = true

  # Provide a fake location provider for mocking
  # the geolocation responses. Disable it if you
  # need to test with chromium's location provider.
  # Should not be enabled for release build.
  enable_fake_location_provider = !is_official_build

  # Enable Chrome extensions support.
  enable_electron_extensions = true

  # Enable Spellchecker support
  enable_builtin_spellchecker = true

  # The version of Electron.
  # Packagers and vendor builders should set this in gn args to avoid running
  # the script that reads git tag.
  override_electron_version = ""

  # Define an extra item that will show in process.versions, the value must
  # be in the format of "key:value".
  # Packagers and vendor builders can set this in gn args to attach extra info
  # about the build in the binary.
  electron_vendor_version = ""

  # Enable Memory Tagging (MTE) via -fsanitize=memtag on macOS arm64 builds.
  # This requires a recent Apple Clang and SDK. If your toolchain does not
  # support this flag, set this to false in your GN args to disable it.
  enable_memtag_on_mac_arm64 = true
}
